--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iaan</title>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <script src="js/jquery-3.7.1.js"></script>
     <script src="js/slick.js"></script>
     <script src="js/mian.js"></script>
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
 
@@ -19,7 +21,7 @@
         <nav>
             <ul class="main">
                 <li>
-                    <a href="#">COMPANY</a>
+                    <a href="company.html">COMPANY</a>
                     <ul class="sub">
                         <li><a href="#">이안소개</a></li>
                         <li><a href="#">인증</a></li>
@@ -52,9 +54,59 @@
             </ul>
             <div id="indicator"></div>
         </nav>
-        <div class="gnb"><a href="#"></a></div>
-
+        
+        <div class="gnb">
+            <a href="#" class="language">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M57.7 193l9.4 16.4c8.3 14.5 21.9 25.2 38 29.8L163 255.7c17.2 4.9 29 20.6 29 38.5l0 39.9c0 11 6.2 21 16 25.9s16 14.9 16 25.9l0 39c0 15.6 14.9 26.9 29.9 22.6c16.1-4.6 28.6-17.5 32.7-33.8l2.8-11.2c4.2-16.9 15.2-31.4 30.3-40l8.1-4.6c15-8.5 24.2-24.5 24.2-41.7l0-8.3c0-12.7-5.1-24.9-14.1-33.9l-3.9-3.9c-9-9-21.2-14.1-33.9-14.1L257 256c-11.1 0-22.1-2.9-31.8-8.4l-34.5-19.7c-4.3-2.5-7.6-6.5-9.2-11.2c-3.2-9.6 1.1-20 10.2-24.5l5.9-3c6.6-3.3 14.3-3.9 21.3-1.5l23.2 7.7c8.2 2.7 17.2-.4 21.9-7.5c4.7-7 4.2-16.3-1.2-22.8l-13.6-16.3c-10-12-9.9-29.5 .3-41.3l15.7-18.3c8.8-10.3 10.2-25 3.5-36.7l-2.4-4.2c-3.5-.2-6.9-.3-10.4-.3C163.1 48 84.4 108.9 57.7 193zM464 256c0-36.8-9.6-71.4-26.4-101.5L412 164.8c-15.7 6.3-23.8 23.8-18.5 39.8l16.9 50.7c3.5 10.4 12 18.3 22.6 20.9l29.1 7.3c1.2-9 1.8-18.2 1.8-27.5zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"/></svg>
+            </a>
+            <a href="#" class="btn">
+                <span class="span1"></span>
+                <span  class="span2"></span>
+                <span class="span3"></span>
+            </a><!-- btn -->        
+        </div><!-- gnb -->
     </header>
+
+    <div class="hoverMenu">
+        <div class="xButton"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg></div>
+
+        <nav>
+            <ul class="hoverMenuMain">
+                <li>
+                    <a href="company.html">COMPANY</a>
+                    <ul class="hoverSub">
+                        <li><a href="#">이안소개</a></li>
+                        <li><a href="#">인증</a></li>
+                        <li><a href="#">오시는 길</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">BUSINESS</a>
+                    <ul class="hoverSub">
+                        <li><a href="#">고객사</a></li>
+                        <li><a href="#">기업부설연구소</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">PRODUCT</a>
+                    <ul class="hoverSub">
+                        <li><a href="#">웹보안</a></li>
+                        <li><a href="#">DB암호화</a></li>
+                        <li><a href="#">DB접근제어</a></li>
+                        <li><a href="#">네트워크보안</a></li>
+                        <li><a href="#">CLOUD</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">SUPPORT</a>
+                    <ul class="hoverSub">
+                        <li><a href="#">CONTACT US</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <div id="indicator"></div>
+        </nav>
+    </div> <!-- hoverMenu -->
 
     <a href="#" class="scrolldown"><img src="images/drag-down.png" alt="scroll"></a>
 
@@ -70,7 +122,7 @@
 
                 <section class="section01">
                     <div class="bg_video">
-                        <video src="images/iaan_main.mp4" autoplay muted loop></video>
+                        <video src="images/iaan_main.mp4" autoplay muted loop class="video"></video>
                         <!-- <source src="images/iaan_main.mp4"> -->
                         <div class="section01_inner">
                             <h2>stay in the nest of your life</h2>
