--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <script src="js/jquery-3.7.1.js"></script>
     <script src="js/slick.js"></script>
-    <script src="js/mian.js"></script>
-    <link rel="stylesheet" href="css/slick.css">
+    <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
-
     
     <header id="header">
-        <h1 class="logo"><a href="#">logo</a></h1>
+        <h1 class="logo"><a href="index.html">logo</a></h1>
         <nav>
             <ul class="main">
                 <li>
                     <a href="company.html">COMPANY</a>
                     <ul class="sub">
-                        <li><a href="#">이안소개</a></li>
-                        <li><a href="#">인증</a></li>
-                        <li><a href="#">오시는 길</a></li>
+                        <li><a href="company.html">이안소개</a></li>
+                        <li><a href="company.html">인증</a></li>
+                        <li><a href="company.html">오시는 길</a></li>
                     </ul>
                 </li>
                 <li>
@@ -75,9 +74,9 @@
                 <li>
                     <a href="company.html">COMPANY</a>
                     <ul class="hoverSub">
-                        <li><a href="#">이안소개</a></li>
-                        <li><a href="#">인증</a></li>
-                        <li><a href="#">오시는 길</a></li>
+                        <li><a href="company.html">이안소개</a></li>
+                        <li><a href="company.html">인증</a></li>
+                        <li><a href="company.html">오시는 길</a></li>
                     </ul>
                 </li>
                 <li>
@@ -431,7 +430,7 @@
                         <div class="con3">
                             <input type="submit" name="submit" id="submit" value="보내기">
                         </div> <!-- con3 -->
-                    </form>
+                    </form> <!-- con_form -->
                 </div> <!-- con_top_right -->
 
             </div> <!-- con_top -->
@@ -448,7 +447,7 @@
                     <p class="info">
                         (주) 이안 <br>
                         대표 김승연, 사업자 등록번호 123-45-7891011, 통신판매업신고번호 2018-서울강남-0096 <br>
-                        서울특별시 강남구 테헤란로 511, 20층(대치동)
+                        서울특별시 강남구 테헤란로 512, 20층(대치동)
                     </p>
 
                     <p class="copy">@2024 Iaan. All rights reserved.</p>
